--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
 flask
 flask-cors
-paddleocr
+paddleocr==2.7.3
 pytesseract
 easyocr
 doctr[torch]
 pillow
-numpy 
+numpy==1.24.3
+opencv-python==4.8.1.78
